tests/errors/papercut/cell-and-group-conflict.expect
---CODE---
1
---STDERR---
Error: tests/errors/papercut/cell-and-group-conflict.futil
9 |    group incr {
  |          ^^^^ Name `incr' already bound by cell
tests/errors/papercut/cell-and-group-conflict.futil
5 |    incr = std_add(32);
  |    ^^^^ Previous definition
